objects/tffa__StipulationTemplate__c.object
<CustomObject>
    <description>Each stipulation defines the type, category and if documents are required for meeting the stipulation.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AllowedDocumentType__c</fullName>
        <description>Allowed document types, EMPLOYMENT, FINANCIALS, IDENTITY, REALESTATE, ADDRESS etc.</description>
        <label>Allowed Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__StipulationDocumentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Category__c</fullName>
        <description>Category of stipulations raised for an application. Possible values are PRE_APPROVAL, PRE_APPROVAL and PRE_QUALIFICATION</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__StipulationCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier that is more human friendly.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the stipulation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes the stipulation template unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DocumentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this stipulation require a document for it to be met.</description>
        <label>Document required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DocumentSubtype__c</fullName>
        <description>A subset category identified within a larger group of documents. A document subtype provides more specific context for the document.</description>
        <label>Document Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DocumentSubtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>Display text for the stipulation. Can be text or a RB key, pointing to the text.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Locale__c</fullName>
        <description>Captures language for the current stipulation template configuration.</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stipulation Template</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stipulation Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>